fix waybar margins leaving extra gap

--- a/env/.config/waybar/style.css
+++ b/env/.config/waybar/style.css
@@ -10,12 +10,12 @@
 #waybar {
   background: transparent;
   color: #c6d0f5;
-  margin: 2px 2px;
+  margin: 2px 2px 0 2px;
 }
 
 #workspaces {
   border-radius: 5px;
-  margin: 5px;
+  margin: 5px 5px 0 5px;
   background: #101010;
   margin-left: 1rem;
 }
@@ -52,7 +52,7 @@
 #custom-power {
   background-color: #101010;
   padding: 0.5rem 1rem;
-  margin: 5px 1px;
+  margin: 5px 1px 0 1px;
   border-radius: 5px 5px 5px 5px;
 }
 
